TL-30068 tui: Added a context mode to switch between contexts to fix popover and dropdown being cut off

--- a/client/component/tui/src/global_styles/variables/tui_zindex.scss
+++ b/client/component/tui/src/global_styles/variables/tui_zindex.scss
@@ -19,7 +19,7 @@
   --zindex-modal: 100050;
   --zindex-error-modal: 100070;
   --zindex-modal-backdrop: 100040;
-  --zindex-popover: 100030;
+  --zindex-popover: 100050;
   --zindex-dropdown-menu: 10000;
   --zindex-loading-page: 100060;
   --zindex-toast: 100070;
